# TiniESt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
tiniest/: engine.cpp  engine.hpp  lex.cpp  lex.hpp  lex.test.cpp
